02/11/2020
==========
New: Example switch control. See switch.prg

24/10/2020
==========
New: Example sessions & autenticate with a easy app. See examples/sessions/app
Enchanced: Command ROW. New clause TOP & BOTTOM. You can control margin-top and margin-bottom of row. See tutor8b.prg
Enchanced: Command SAY. New clause LINK. See say-link.prg

21/10/2020
==========
New: Sessions system is ready !. 
	See test_session.prg, test_session_read.prg, test_session_end.prg

20/10/2020
==========
Enchanced: New clause for get label: FONTLABEL. See get-font2

19/10/2020
==========
New: GETNUMBER control for use in tablets. See get-num.prg
Bug: Font solved when focus
New: Browse Multiselect. See browse-select

07/10/2020
==========
Example: Use HTML command. html.prg

05/10/2020
==========
Enchanced: TWebFolder() propertie :lBorder. See folder3.prg
Enchanced: TWebFolder() Tab clause class. See folder3.prg

30/09/2020
==========
Enchanced: TWebGet() clause LINK. See get-link.prg

29/09/2020
==========
New: JS TWebBrwSearch(). See brwsearch.prg
Updated: TWebFolder() Option working

28/09/2020
==========
Enchanced: TWebGet multi-button. See get-btn.prg

27/09/2020
==========
Enchanced: TWebGet align


25/09/2020
==========
New: TWebImage. See image.prg
New: JS TWebBrwSelect(). Select from table a row. brwselect.prg

13/09/2020
==========
New: Container BOX: See box.prg, box2.prg, box3.prg
Updated: New clause CLASS to ROW/ROWGROUP 