@@ -82,7 +82,7 @@
       </div>
       <div id="collapse1" class="panel-collapse collapse show ">
         <div class="panel-body">
-          <p><a target="_blank_" href="https://github.com/carles9000/tweb"><em>TWeb</em></a></span> fue portado para el entorno Génesis Profesional, pero se ha decido extraer toda la libreria para poderla usar independientemente.
+          <p><a target="_blank_" href="info"><em>TWeb</em></a></span> fue portado para el entorno Génesis Profesional, pero se ha decido extraer toda la libreria para poderla usar independientemente.
 		  Las ventajas principales son:
           <ul>
             <li>Creación de pantallas facilmente usando sintaxis xBase</li>
