@@ -83,7 +83,7 @@
       </div>
       <div id="collapse1" class="panel-collapse collapse show">
         <div class="panel-body">
-          <p><a target="_blank_" href="https://github.com/carles9000/tweb"><em>TWeb</em></a></span> It was ported for the Genesis Professional environment, but it has been decided to extract the entire library to be able to use it independently.
+          <p><a target="_blank_" href="info"><em>TWeb</em></a></span> It was ported for the Genesis Professional environment, but it has been decided to extract the entire library to be able to use it independently.
 		  The main advantages are:
           <ul>
             <li>Create screens easily using xBase syntax</li>
