@@ -7,7 +7,7 @@ function MsgInfo( cMsg, cTitle, cIcon, fCallback ) {
 	cIcon 	= (typeof cIcon ) == 'string' ? cIcon : '<i class="fas fa-info-circle"></i>' ;
 	
 	if ( typeof cMsg !== 'string' ||( typeof cMsg == 'string' && cMsg.length == 0 ))
-		cMsg = '&nbsp;'
+		cMsg = String(cMsg)
 	
 	//	Check animations -> https://codepen.io/ghimawan/pen/vXYYOz?editors=0010#0
 	
@@ -174,11 +174,12 @@ function MsgServer( cUrl, oValues, fCallback, cFormat ) {
   "fas fa-stroopwafel fa-spin"
 */
 
-function MsgLoading( cMessage, cTitle, cIcon ) {
+function MsgLoading( cMessage, cTitle, cIcon, lHeader ) {
 
 	cMessage 	= (typeof cMessage ) == 'string' ? cMessage : 'Loading...' ;
 	cTitle 		= (typeof cTitle ) == 'string' ? cTitle : 'System' ;
 	cIcon 		= (typeof cIcon ) == 'string' ? cIcon : '<i class="fas fa-sync fa-spin"></i>' ;
+	lHeader		= (typeof lHeader ) == 'boolean' ? lHeader : false ;
 
 	var dialog = bootbox.dialog({
 			title: cTitle,
@@ -188,9 +189,11 @@ function MsgLoading( cMessage, cTitle, cIcon ) {
 		}); 
 
 	dialog.addClass("loading_center");
-	dialog.find("div.modal-content").addClass("loading_content");																
-	dialog.find("div.modal-header").addClass("loading_header");																
+	dialog.find("div.modal-content").addClass("loading_content");
 	dialog.find("div.modal-body").addClass("loading_body");																
+	
+	if ( ! lHeader )
+		dialog.find("div.modal-header").addClass("loading_header");																
 		
 	return dialog
 }
